# online_store_2

./: .env.sample  Dockerfile  README.md  blogentry_fixture.json  categories_fixture.json  docker-compose.yml  products_fixture.json  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogentry_options.py  0003_blogentry_author.py
blog/templates/blog/: blogentry_confirm_delete.html  blogentry_detail.html  blogentry_form.html  blogentry_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_data.py
catalog/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_contact.py  0004_alter_contact_first_name_alter_contact_last_name.py  0005_alter_product_category_alter_product_image.py  0006_product_is_published_product_owner.py  0007_alter_product_options.py
catalog/templates/catalog/: add_product.html  base.html  contacts.html  home.html  product.html  product_by_category_list.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_footer.html  (+3 more)
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_test_users.py  csu.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py  0003_alter_customuser_options_customuser_token.py
users/templates/registration/: edit_profile.html  logged_out.html  login.html  register.html
